--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "baucis": "~0.6.11",
     "mongoose": "~3.6.18",
-    "express": "~3.3.5"
+    "express": "~3.3.5",
+    "request": "~2.27.0"
   }
 }
