--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "~3.6.18",
     "express": "~3.3.5",
     "request": "~2.27.0",
-    "corser": "~1.2.0"
+    "corser": "~1.2.0",
+    "optimist": "~0.6.0"
   }
 }
