--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "~3.4.6",
     "request": "~2.27.0",
     "corser": "~1.2.0",
-    "optimist": "~0.6.0"
+    "optimist": "~0.6.0",
+    "basic-auth": "~0.0.1"
   }
 }
