--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "grunt-contrib-watch": "~0.5.3"
   },
   "dependencies": {
-    "baucis": "~0.6.18",
+    "baucis": "~0.15.0",
+    "baucis-swagger": "~0.2.5",
     "mongoose": "~3.8.1",
     "express": "~3.4.6",
     "request": "~2.27.0",
